# integral-finder

./: CMakeLists.txt
docs/: help.yaml
source/: main.cpp
